     It should simply be  GPL-2 (Closes: #638971). Thanks to
     Wen-Yen Chuang.
   - Update to respect current DEP-5 spec.
  * debian/control: Correct homepage field for new url
    (Closes: #648363). 
  * debian/patches/fix_login_option.patch: Backport fix from upstream
    vcs for broken --login option (Closes: 639652, LP: 887105). 

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Tue, 23 Aug 2011 09:06:41 -0400

sakura (2.4.2-1) unstable; urgency=low

  [ Norbert Preining ]
  * Change the vcs locations in debian/control.

  [ Andrew Starr-Bochicchio ]
  * New upstream release.
  * debian/control:
   - Bump Standards-Version to 3.9.2, no changes needed.
   - Bump libgtk2.0-dev and libvte-dev build deps.
   - Update Vcs-Browser field again due to Aloith changes.  

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Tue, 02 Aug 2011 14:33:44 -0400

sakura (2.3.8-1) unstable; urgency=low

  * Initial Debian release. (Closes: #467375)

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Tue, 18 May 2010 12:54:42 -0400

sakura (2.3.8-0ubuntu1) maverick; urgency=low

  * New upstream release.
  * Deleate un-needed debian/README.source file.

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Sat, 15 May 2010 14:08:12 -0400

sakura (2.3.7-0ubuntu1) lucid; urgency=low

  * New upstream bugfix release.

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Mon, 08 Mar 2010 18:36:28 -0500

sakura (2.3.6-0ubuntu1) lucid; urgency=low

  * New upstream release.
  * debian/control: Bump Standards-Version to 3.8.4
  * Moved to DebSrc version 3.0 (quilt).

 -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Tue, 16 Feb 2010 23:10:30 -0500

sakura (2.3.5-0ubuntu1) lucid; urgency=low

  * New upstream release.
  * Drop debian/sakura.pod, manpage included upstream.
  * Drop debian/patches/10_desktopfile_validate, incuded upstream. 
  * debain/{rules, control}:
   - Drop quilt.
   - Move to dh 7
  * debian/control:
   - Bump Standards-Version to 3.8.3