@@ -9,6 +9,9 @@ sakura (2.4.2-2) UNRELEASED; urgency=low
     (Closes: #648363). 
   * debian/patches/fix_login_option.patch: Backport fix from upstream
     vcs for broken --login option (Closes: 639652, LP: 887105). 
+  * debian/{watch, rules}: Upstream now hosts releases in a location
+    that uscan can find. Update watch file to look in the right location
+    and remove now un-needed get-orig-source target.
 
  -- Andrew Starr-Bochicchio <a.starr.b@gmail.com>  Tue, 23 Aug 2011 09:06:41 -0400
 
